--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -113,7 +113,6 @@
                                 <h4><i class="fas fa-ruler-combined"></i> Cómo medir tu cuerpo</h4>
                                 <p>Seguí estos pasos para elegir tu talle correcto:</p>
                             </div>
-                            
                             <div class="pasos-medida">
                                 <div class="paso">
                                     <div class="paso-icono"><i class="fas fa-tshirt"></i></div>
@@ -341,27 +340,43 @@ function obtenerProducto(id) {
         1: { name: "Remera Térmica", price: 14999, image: "Termica.jpeg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
         2: { name: "Gorra", price: 24999, image: "Gorras.jpeg", sizes: ["Ajustable"], colors: ["Negro", "Azul"] },
         3: { name: "Cuellos Lycra Frizada", price: 3999, image: "Cuellito.jpeg", sizes: ["Único"], colors: ["Negro"] },
-        4: { name: "Remera Oversize ", price: 17999, image: "assets/products/remera-oversize-negra.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
-        5: { name: "Buzo Canguro ", price: 25000, image: "assets/products/buzo-canguro-negro.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
-        6: { name: "Jeans Rotos Oversize", price: 28999, image: "https://example.com/jeans-rotos.jpg", sizes: ["28", "30", "32", "34"], colors: ["Azul"] },
-        7: { name: "Campera Denim", price: 45999, image: "https://example.com/campera-denim.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Azul"] },
-        8: { name: "Calza One Leg", price: 19999, image: "assets/products/calza-one-leg.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
-        9: { name: "Calza Larga", price: 24999, image: "assets/products/calza-larga.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
-        10: { name: "Calza Corta Deportiva Mujer", price: 7999, image: "assets/products/calza-corta-mujer.jpg", sizes: ["XS", "S", "M", "L"], colors: ["Negro"] },
-        11: { name: "Pantalón cargo alto con strass", price: 71000, image: "assets/products/pantalon-cargo-strass.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Fucsia", "Verde"] },
-        12: { name: "Remera con malla transparente", price: 20000, image: "assets/products/remera-malla.jpg", sizes: ["S", "M"], colors: ["Blanco"] },
-        13: { name: "Campera Nike Tech Fleece", price: 150000, image: "assets/products/campera-nike.jpg", sizes: ["L", "XL", "XXL"], colors: ["Negro"] },
-        14: { name: "Campera puffer acolchonada", price: 48000, image: "assets/products/campera-puffer.jpg", sizes: ["S", "M", "L"], colors: ["Negro"] },
-        15: { name: "Top oversize algodón (manga larga)", price: 12000, image: "assets/products/top-oversize.jpg", sizes: ["S", "M"], colors: ["Negro"] },
-        16: { name: "Top satén liso con tirantes finos", price: 21000, image: "assets/products/top-saten.jpg", sizes: ["S", "M"], colors: ["Negro", "Rojo"] },
-        17: { name: "Jogging oversize lycra deportivo", price: 71000, image: "assets/products/jogging-lycra.jpg", sizes: ["S", "M", "L"], colors: ["Negro"] },
-        18: { name: "Jean wide leg animal print", price: 47000, image: "assets/products/jean-animal.jpg", sizes: ["36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46"], colors: ["Blanco", "Negro"] },
-        19: { name: "Sweater oversize estampado cebra", price: 45000, image: "assets/products/sweater-cebra.jpg", sizes: ["3XL"], colors: ["Verde"] },
-        20: { name: "Top bandeau plisado sin tirantes", price: 18000, image: "assets/products/top-bandeau.jpg", sizes: ["S", "M"], colors: ["Rosa"] },
-        21: { name: "Buzo canguro tela peluche", price: 17000, image: "assets/products/buzo-peluche.jpg", sizes: ["S-M", "L-XL", "2XL-3XL"], colors: ["Gris"] }
+        4: { name: "DC Court Graffick Rosas", price: 199999, image: "dc-rosas.jpeg", sizes: ["36", "37", "38", "39", "40"], colors: ["Negro"] },
+        5: { name: "Puma 180", price: 169999, image: "puma-180.jpeg", sizes: ["38", "39", "40", "41", "42"], colors: ["Negro"] },
+        6: { name: "Osiris D3 2001", price: 299999, image: "osiris-d3.jpeg", sizes: ["39", "40", "41", "42"], colors: ["Negro"] },
+        7: { name: "Remera Oversize", price: 17999, image: "assets/products/remera-oversize-negra.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
+        8: { name: "Buzo canguro tela peluche", price: 17000, image: "assets/products/buzo-peluche.jpg", sizes: ["S-M", "L-XL", "2XL-3XL"], colors: ["Gris"] },
+        9: { name: "Buzo Canguro", price: 25000, image: "assets/products/buzo-canguro-negro.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
+        11: { name: "Jeans Rotos Oversize", price: 28999, image: "https://example.com/jeans-rotos.jpg", sizes: ["28", "30", "32", "34"], colors: ["Azul"] },
+        12: { name: "Campera Denim", price: 45999, image: "https://example.com/campera-denim.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Azul"] },
+        13: { name: "Mochila The North Face", price: 54999, image: "https://example.com/mochila-tnf.jpg", sizes: [], colors: [] },
+        14: { name: "Calza One Leg", price: 19999, image: "assets/products/calza-one-leg.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
+        15: { name: "Calza Larga", price: 24999, image: "assets/products/calza-larga.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
+        17: { name: "Nike Lebron XXI", price: 259999, image: "assets/products/lebron-xxi.jpg", sizes: ["39", "40", "41", "42", "43", "44"], colors: ["Negro"] },
+        18: { name: "Nike Lebron Witness 7", price: 259999, image: "assets/products/lebron-witness7.jpg", sizes: ["39", "40", "41", "42", "43", "44"], colors: ["Negro"] },
+        19: { name: "Calza Corta Deportiva Mujer", price: 7999, image: "assets/products/calza-corta-mujer.jpg", sizes: ["XS", "S", "M", "L"], colors: ["Negro"] },
+        20: { name: "Giannis Immortality 4", price: 149999, image: "assets/products/giannis-immortality4.jpg", sizes: ["39", "40", "41", "42", "43", "44"], colors: ["Negro"] },
+        21: { name: "Nike G.T. Cut Academy", price: 119999, image: "assets/products/nike-gt-cut.jpg", sizes: ["39", "40", "41", "42", "43", "44"], colors: ["Negro"] },
+        22: { name: "Jordan Tatum 2", price: 219999, image: "assets/products/jordan-tatum2.jpg", sizes: ["39", "40", "41", "42", "43", "44", "45"], colors: ["Negro"] },
+        23: { name: "Air Jordan XXXVIII", price: 319999, image: "assets/products/air-jordan-38.jpg", sizes: ["40", "41", "42", "43", "44"], colors: ["Negro"] },
+        24: { name: "Kobe VIII Protro", price: 289999, image: "assets/products/kobe-viii-protro.jpg", sizes: ["39", "40", "41", "42", "43"], colors: ["Negro"] },
+        26: { name: "Botas Bucaneras (gamuza sintética)", price: 39000, image: "assets/products/botas-bucaneras.jpg", sizes: ["36", "37", "38", "39", "40"], colors: ["Negro"] },
+        27: { name: "Borcegos veganos plataforma", price: 43000, image: "assets/products/borcegos-veganos.jpg", sizes: ["35", "36", "37", "38", "39", "40"], colors: ["Negro"] },
+        28: { name: "Remera oversize 2Pac (All Eyez On Me)", price: 29000, image: "assets/products/remera-2pac.jpg", sizes: ["M", "L", "XL"], colors: ["Negro"] },
+        29: { name: "Pantalón cargo alto con strass", price: 71000, image: "assets/products/pantalon-cargo-strass.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Fucsia", "Verde"] },
+        30: { name: "Remera con malla transparente", price: 20000, image: "assets/products/remera-malla.jpg", sizes: ["S", "M"], colors: ["Blanco"] },
+        31: { name: "Campera Nike Tech Fleece", price: 150000, image: "assets/products/campera-nike.jpg", sizes: ["L", "XL", "XXL"], colors: ["Negro"] },
+        32: { name: "Campera puffer acolchonada", price: 48000, image: "assets/products/campera-puffer.jpg", sizes: ["S", "M", "L"], colors: ["Negro"] },
+        33: { name: "Top oversize algodón (manga larga)", price: 12000, image: "assets/products/top-oversize.jpg", sizes: ["S", "M"], colors: ["Negro"] },
+        34: { name: "Top satén liso con tirantes finos", price: 21000, image: "assets/products/top-saten.jpg", sizes: ["S", "M"], colors: ["Negro", "Rojo"] },
+        36: { name: "Jogging oversize lycra deportivo", price: 71000, image: "assets/products/jogging-lycra.jpg", sizes: ["S", "M", "L"], colors: ["Negro"] },
+        37: { name: "Remera estampado animal sobre blanco", price: 25000, image: "assets/products/remera-animal.jpg", sizes: ["S", "M", "L"], colors: ["Blanco"] },
+        38: { name: "Jean wide leg animal print", price: 47000, image: "assets/products/jean-animal.jpg", sizes: ["36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46"], colors: ["Blanco", "Negro"] },
+        39: { name: "Sweater oversize estampado cebra", price: 45000, image: "assets/products/sweater-cebra.jpg", sizes: ["3XL"], colors: ["Verde"] },
+        40: { name: "Top bandeau plisado sin tirantes", price: 18000, image: "assets/products/top-bandeau.jpg", sizes: ["S", "M"], colors: ["Rosa"] },
     };
     return productos[id];
-}       
+}
+
         function mostrarProducto(producto) {
             document.getElementById('producto-imagen').src = producto.image;
             document.getElementById('producto-nombre').textContent = producto.name;
