--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -343,7 +343,7 @@ function obtenerProducto(id) {
         4: { name: "DC Court Graffick Rosas", price: 199999, image: "dc-rosas.jpeg", sizes: ["36", "37", "38", "39", "40"], colors: ["Negro"] },
         5: { name: "Puma 180", price: 169999, image: "puma-180.jpeg", sizes: ["38", "39", "40", "41", "42"], colors: ["Negro"] },
         6: { name: "Osiris D3 2001", price: 299999, image: "osiris-d3.jpeg", sizes: ["39", "40", "41", "42"], colors: ["Negro"] },
-        7: { name: "Remera Oversize", price: 17999, image: "assets/products/remera-oversize-negra.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
+        7: { name: "Remera Oversize", price: 17999, image: "remera-violeta.jpeg", sizes: ["S", "M", "L", "XL", "XL"], colors: ["Negro", "Blanco", "Gris", "Marron", "Violeta", "Verde", "Bordo"] },
         8: { name: "Buzo canguro tela peluche", price: 17000, image: "assets/products/buzo-peluche.jpg", sizes: ["S-M", "L-XL", "2XL-3XL"], colors: ["Gris"] },
         9: { name: "Buzo Canguro", price: 25000, image: "assets/products/buzo-canguro-negro.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
         11: { name: "Jeans Rotos Oversize", price: 28999, image: "https://example.com/jeans-rotos.jpg", sizes: ["28", "30", "32", "34"], colors: ["Azul"] },
