--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -359,10 +359,10 @@
                     colors: ["Negro", "Azul"] 
                 },
                 3: { 
-                    name: "Cuellos Lycra Frizada", 
+                    name: "Cuellos Termicos", 
                     price: 3999, 
                     images: {
-                        "Negro": "Cuellito-negro.jpeg"
+                        "Negro": "cuello-negro.jpeg"
                     }, 
                     sizes: ["Único"], 
                     colors: ["Negro"] 
@@ -371,19 +371,19 @@
                     name: "DC Court Graffick Rosas", 
                     price: 199999, 
                     images: {
-                        "Negro": "dc-rosas.jpeg"
+                        "Negro-Rosa": "dc-rosas.jpeg"
                     }, 
                     sizes: ["36", "37", "38", "39", "40"], 
-                    colors: ["Negro"] 
+                    colors: ["Negro-Rosa"] 
                 },
                 5: { 
                     name: "Puma 180", 
                     price: 169999, 
                     images: {
-                        "Negro": "puma-180.jpeg"
+                        "Gris": "puma-180.jpeg"
                     }, 
                     sizes: ["38", "39", "40", "41", "42"], 
-                    colors: ["Negro"] 
+                    colors: ["Gris"] 
                 },
                 6: { 
                     name: "Osiris D3 2001", 
@@ -398,13 +398,13 @@
                     name: "Remera Oversize", 
                     price: 17999, 
                     images: {
-                        "Negro": "remera-oversize-negro.jpeg",
-                        "Blanco": "remera-oversize-blanco.jpeg",
-                        "Gris": "remera-oversize-gris.jpeg",
-                        "Marron": "remera-oversize-marron.jpeg",
-                        "Violeta": "remera-violeta.jpeg",
-                        "Verde": "remera-oversize-verde.jpeg",
-                        "Bordo": "remera-oversize-bordo.jpeg"
+                        "Negro": "remera-negro.jpeg",
+                        "Blanco": "remera-blanco.jpeg",
+                        "Gris": "remera-gris.jpeg",
+                        "Marron": "remera-marron.jpeg",
+                        "Violeta": "remera.jpeg",
+                        "Verde": "remera-verde.jpeg",
+                        "Bordo": "remera-bordo.jpeg"
                     }, 
                     sizes: ["S", "M", "L", "XL"], 
                     colors: ["Negro", "Blanco", "Gris", "Marron", "Violeta", "Verde", "Bordo"] 
