--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="product-card">
             <span class="tag-discount">20% OFF</span>
             <div class="product-image-container">
-                <img src="Termica.jpeg" alt="Remera Térmica Manga Corta" class="product-image">
+                <img src="Termica-negro.jpeg" alt="Remera Térmica Manga Corta" class="product-image">
             </div>
             <div class="product-info">
                 <h3>Remera Térmica Manga Corta</h3>
@@ -172,7 +172,7 @@
         <!-- Producto 2 - Remera Oversize -->
         <div class="product-card">
             <div class="product-image-container">
-                <img src="assets/products/remera-oversize-blanca.jpg" alt="Remera Oversize Blanca" class="product-image">
+                <img src="remera-violeta,jpeg" alt="Remera Oversize Blanca" class="product-image">
             </div>
             <div class="product-info">
                 <h3>Remera Oversize</h3>
