--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="product-card">
             <span class="tag-discount">20% OFF</span>
             <div class="product-image-container">
-                <img src="Cuellito.jpeg" alt="Cuellos Termicos" class="product-image">
+                <img src="cuello-negro.jpeg" alt="Cuellos Termicos" class="product-image">
             </div>
             <div class="product-info">
                 <h3>Cuellos Termicos (x 5 unidades)</h3>
@@ -156,7 +156,7 @@
         <div class="product-card">
             <span class="tag-bestseller">MÁS VENDIDO</span>
             <div class="product-image-container">
-                <img src="assets/products/remera-oversize-negra.jpg" alt="Remera Oversize Negra" class="product-image">
+                <img src="assets/products/remera-violeta.jpeg" alt="Remera Oversize Negra" class="product-image">
             </div>
             <div class="product-info">
                 <h3>Pantalon Cargo Baggy</h3>
