--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <!-- Producto 2 - Remera Oversize -->
         <div class="product-card">
             <div class="product-image-container">
-                <img src="remera-violeta,jpeg" alt="Remera Oversize Blanca" class="product-image">
+                <img src="remera-violeta.jpeg" alt="Remera Oversize Blanca" class="product-image">
             </div>
             <div class="product-info">
                 <h3>Remera Oversize</h3>
