--- a/index.html
+++ b/index.html
@@ -152,18 +152,17 @@
 <section id="ropa" class="products">
     <h2 class="section-title"><span class="blue-accent">STREETWEAR</span> <span class="text-light">COLLECTION</span></h2>
     <div class="product-grid">
-        <!-- Producto 1 - Pantalon Cargo Baggy -->
         <div class="product-card">
             <span class="tag-bestseller">MÁS VENDIDO</span>
             <div class="product-image-container">
-                <img src="assets/products/remera-violeta.jpeg" alt="Remera Oversize Negra" class="product-image">
+                <img src="assets/products/remera-violeta.jpeg" alt="Remera Oversize" class="product-image">
             </div>
             <div class="product-info">
                 <h3>Pantalon Cargo Baggy</h3>
                 <p class="price">$29.999</p>
                 <p class="size">Talles: S a XXL</p>
                 <p class="custom-notice">¡Personaliza tu diseño!</p>
-                <button onclick="window.location.href='personalizar-compra.html?producto=4'" class="btn-comprar">
+                <button onclick="window.location.href='personalizar-compra.html?producto=5'" class="btn-comprar">
                     <i class="fas fa-shopping-cart"></i> COMPRAR
                 </button>
             </div>
@@ -179,7 +178,7 @@
                 <p class="price">$17.999</p>
                 <p class="size">Talles: S a XXL</p>
                 <p class="custom-notice">¡Personaliza tu diseño!</p>
-                <button onclick="window.location.href='personalizar-compra.html?producto=5'" class="btn-comprar">
+                <button onclick="window.location.href='personalizar-compra.html?producto=4'" class="btn-comprar">
                     <i class="fas fa-shopping-cart"></i> COMPRAR
                 </button>
             </div>
@@ -189,14 +188,14 @@
         <div class="product-card">
             <span class="tag-bestseller">MÁS VENDIDO</span>
             <div class="product-image-container">
-                <img src="assets/products/buzo-canguro-negro.jpg" alt="Buzo Canguro Negro" class="product-image">
+                <img src="assets/products/buzo-canguro-negro.jpg" alt="Buzo Canguro" class="product-image">
             </div>
             <div class="product-info">
                 <h3>Buzo Canguro</h3>
                 <p class="price">$29.999</p>
                 <p class="size">Talles: M a XL</p>
                 <p class="custom-notice">¡Personaliza tu diseño!</p>
-                <button onclick="window.location.href='personalizar-compra.html?producto=7'" class="btn-comprar">
+                <button onclick="window.location.href='personalizar-compra.html?producto=6'" class="btn-comprar">
                     <i class="fas fa-shopping-cart"></i> COMPRAR
                 </button>
             </div>
