--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -375,7 +375,7 @@
                         "Blanco": "remera-blanco.jpeg",
                         "Gris": "remera-gris.jpeg",
                         "Marron": "remera-marron.jpeg",
-                        "Violeta": "remera.jpeg",
+                        "Violeta": "remera-violeta.jpeg",
                         "Verde": "remera-verde.jpeg",
                         "Bordo": "remera-bordo.jpeg"
                     }, 
