--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -351,11 +351,16 @@
                     name: "Gorra", 
                     price: 24999, 
                     images: {
-                        "Negro": "Gorras-negro.jpeg",
-                        "Azul": "Gorras-azul.jpeg"
+                        "Elegir": "Gorras.jpeg",
+                        "Bulls (Negro)": "Bulls-negro.png",
+                        "Lakers (Negro)": "lakers-negro.png", 
+                        "New York (Negro)": "ny-negro.png",
+                        "Los Angeles (Beige)": "la-beige.png", 
+                        "Rocket (Rojo)": "rocket-rojo.png", 
+                        "Raptors (Gris)": "Raptors-gris.png"
                     }, 
                     sizes: ["Ajustable"], 
-                    colors: ["Negro", "Azul"] 
+                    colors: ["Elegir", "Bulls (Negro)", "Lakers (Negro)", "New York (Negro)", "Los Angeles (Beige)", "Rocket (Rojo)", "Raptors (Gris)"] 
                 },
                 3: { 
                     name: "Cuellos Termicos", 
