--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -404,6 +404,15 @@
                     sizes: ["S", "M", "L", "XL"], 
                     colors: ["Negro"] 
                 },
+                12: { 
+                    name: "Campera de Jean", 
+                    price: 39999, 
+                    images: {
+                        "Clasico": "camperajean.jpeg"
+                    }, 
+                    sizes: ["S", "M", "L", "XL"], 
+                    colors: ["Clasico"] 
+                },
                 14: { 
                     name: "Calza One Leg", 
                     price: 19999, 
