--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -396,7 +396,7 @@
     }, 
     sizes: ["S", "M", "L", "XL"], 
     colors: ["Negro", "Blanco", "Gris", "Marron", "Violeta", "Verde", "Bordo"],
-    prints: ["Sin estampado", "Logo pequeño", "Logo grande", "Diseño completo"] // Nuevo campo para estampados
+    prints: ["Sin estampado", "The North Face"]
 },
                 6: { 
                     name: "Buzo canguro tela peluche", 
