--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -470,22 +470,25 @@
                             "Verde": "remera-verde.jpeg"
                         },
                         "espalda": {
-                            "Negro": "remera-espalda-negro.jpeg",
-                            "Blanco": "remera-espalda-blanco.jpeg",
-                            "Gris": "remera-espalda-gris.jpeg"
+                            "Negro": "remera-frente-negro.jpeg",
+                            "Blanco": "remera-frente-blanco.jpeg",
+                            "Gris": "remera-frente-gris.jpeg",
+                            "Violeta": "remera-violeta.jpeg",
+                            "Marron": "remera-marron.jpeg",
+                            "Verde": "remera-verde.jpeg"
                         }
                     }, 
                     sizes: ["S", "M", "L", "XL"], 
                     colors: ["Negro", "Blanco", "Gris", "Violeta", "Marron", "Verde"],
-                    prints: ["Sin estampado", "The North Face", "Logo grande", "Diseño completo"],
+                    prints: ["Sin estampado", "The North Face"],
                     estampados: {
                         "The North Face": {
-                            "frente": "estampados/logo-pequeno-frente.png",
-                            "espalda": "estampados/logo-pequeno-espalda.png"
+                            "frente": "north-face.png",
+                            "espalda": "north-face.png"
                         }
                     }
                 },
-             6:{ 
+                6:{ 
                     name: "Buzo canguro tela peluche", 
                     price: 17000, 
                     images: {
