--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -49,6 +49,7 @@
     max-width: 80%;
     max-height: 80%;
     object-fit: contain;
+    z-index: 1;
 }
         
         .size-guide-container {
@@ -111,6 +112,7 @@
     opacity: 0;
     transition: opacity 0.3s ease;
     pointer-events: none;
+    z-index: 2;
 }
         
         .estampado-img.active {
