--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -225,6 +225,12 @@
                             <label for="color">Color:</label>
                             <select id="color" name="color" required></select>
                         </div>
+
+                       <!-- Selección de estampas -->
+                        <div class="selector">
+                            <label for="estampa">Estampa:</label>
+                            <select id="estampa" name="estampa" required></select>
+                        </div>
                         
                         <!-- Cantidad -->
                         <div class="selector">
@@ -376,10 +382,12 @@
                         "Marron": "remera-marron.jpeg",
                         "Violeta": "remera-violeta.jpeg",
                         "Verde": "remera-verde.jpeg",
-                        "Bordo": "remera-bordo.jpeg"
+                        "Bordo": "remera-bordo.jpeg",
+                        "The North Face": "north-face.png"
                     }, 
                     sizes: ["S", "M", "L", "XL"], 
-                    colors: ["Negro", "Blanco", "Gris", "Marron", "Violeta", "Verde", "Bordo"] 
+                    colors: ["Negro", "Blanco", "Gris", "Marron", "Violeta", "Verde", "Bordo"],
+                    prints: ["Sin estampado", "The North Face"],
                 },
                 6: { 
                     name: "Buzo canguro tela peluche", 
