--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -260,7 +260,7 @@
                                 <option value="">Seleccionar</option>
                                 <option value="Efectivo">Efectivo (10% descuento)</option>
                                 <option value="Transferencia">Transferencia bancaria</option>
-                                <option value="MercadoPago">Mercado Pago</option>
+                                <option value="MercadoPago">Mercado Pago / Cuotas</option>
                                 <option value="Cripto">Criptomonedas</option>
                             </select>
                         </div>
