--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -260,7 +260,7 @@
                                 <option value="">Seleccionar</option>
                                 <option value="Efectivo">Efectivo (5% descuento)</option>
                                 <option value="Transferencia">Transferencia bancaria</option>
-                                <option value="MercadoPago">Mercado Pago / Cuotas</option>
+                                <option value="MercadoPago">Mercado Pago</option>
                                 <option value="Cripto">Criptomonedas</option>
                             </select>
                         </div>
@@ -269,7 +269,7 @@
                         <div class="selector" id="cuotas-container" style="display:none;">
                             <label for="cuotas">Cuotas:</label>
                             <select id="cuotas" name="cuotas">
-                                <option value="1">1 cuota (sin interés)</option>
+                                <option value="1">1 cuota (4%)</option>
                                 <option value="3">3 cuotas (+10%)</option>
                                 <option value="6">6 cuotas (+20%)</option>
                             </select>
