--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -139,7 +139,7 @@
                                 <div class="paso">
                                     <div class="paso-icono"><i class="fas fa-arrow-down"></i></div>
                                     <div class="paso-texto">
-                                        <strong>Cintura:</strong> Medí donde normalmente usás el cinturón, sin ajustar demasiado.
+                                        <strong>Cintura:</strong> Medí donde normalmente usás el cinturón o pantalon, sin ajustar demasiado.
                                     </div>
                                 </div>
                             </div>
@@ -521,7 +521,7 @@
             document.getElementById('producto-imagen').src = imagenMostrar;
             document.getElementById('producto-nombre').textContent = producto.name;
             document.getElementById('producto-precio').textContent = `$${producto.price.toLocaleString('es-AR')}`;
-            document.getElementById('producto-descripcion').textContent = producto.description || "Producto exclusivo GUZZOCORP";
+            document.getElementById('producto-descripcion').textContent = producto.description || "Producto exclusivo GUZZOCORP, para Finalizar la Compra tenes que completar todos los campos, si tenes algun problema escribinos al 266 4008 408";
             
             // Llenar talles
             const selectTalle = document.getElementById('talle');
