--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -521,7 +521,7 @@
             document.getElementById('producto-imagen').src = imagenMostrar;
             document.getElementById('producto-nombre').textContent = producto.name;
             document.getElementById('producto-precio').textContent = `$${producto.price.toLocaleString('es-AR')}`;
-            document.getElementById('producto-descripcion').textContent = producto.description || "Producto exclusivo GUZZOCORP, para Finalizar la Compra tenes que completar todos los campos, si tenes algun problema escribinos al 266 4008 408";
+            document.getElementById('producto-descripcion').textContent = producto.description || "Producto exclusivo GUZZOCORP, para Finalizar la Compra tenes que completar todos los campos, si tenes algun problema o duda escribi al 266 4008 408";
             
             // Llenar talles
             const selectTalle = document.getElementById('talle');
