--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <div class="product-card">
             <span class="tag-bestseller">MÁS VENDIDO</span>
             <div class="product-image-container">
-                <img src="assets/products/buzo-canguro-negro.jpg" alt="Buzo Canguro" class="product-image">
+                <img src="buzocanguro-negro.jpeg" alt="Buzo Canguro" class="product-image">
             </div>
             <div class="product-info">
                 <h3>Buzo Canguro</h3>
