--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="product-card">
             <span class="tag-bestseller">MÁS VENDIDO</span>
             <div class="product-image-container">
-                <img src="assets/products/remera-violeta.jpeg" alt="Remera Oversize" class="product-image">
+                <img src="pantaloncargo.jpeg" alt="Pantalon Cargo" class="product-image">
             </div>
             <div class="product-info">
                 <h3>Pantalon Cargo Baggy</h3>
