--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -396,6 +396,15 @@
                     sizes: ["Único"], 
                     colors: ["Negro"] 
                 },
+                4: { 
+                    name: "Pantalon Cargo Baggy", 
+                    price: 29999, 
+                    images: {
+                        "Negro": "pantaloncargo.jpeg"
+                    }, 
+                    sizes: ["38", "39", "40", "41", "42", "43", "44", "46", "48"] 
+                    colors: ["Negro"] 
+                },
                 7: { 
                     name: "Remera Oversize", 
                     price: 17999, 
