--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -402,7 +402,7 @@
                     images: {
                         "Negro": "pantaloncargo.jpeg"
                     }, 
-                    sizes: ["38", "39", "40", "41", "42", "43", "44", "46", "48"] 
+                    sizes: ["38", "39", "40", "41", "42", "43", "44", "46", "48"], 
                     colors: ["Negro"] 
                 },
                 7: { 
