--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -420,7 +420,7 @@
                     }, 
                     sizes: ["S", "M", "L", "XL"], 
                     colors: ["Negro", "Blanco", "Gris", "Marron", "Violeta", "Verde", "Bordo"],
-                    estampa: ["Sin estampado", "The North Face"],
+                    estampa: ["Sin estampado", "The North Face"]
                 },
                 6: { 
                     name: "Buzo canguro tela peluche", 
