--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -419,7 +419,7 @@
                         "The North Face": "north-face.png"
                     }, 
                     sizes: ["S", "M", "L", "XL"], 
-                    colors: ["Negro", "Blanco", "Gris", "Marron", "Violeta", "Verde", "Bordo"],
+                    colors: ["Violeta", "Marron", "Negro", "Blanco", "Gris", "Verde", "Bordo"],
                     estampa: ["Sin estampado", "The North Face"]
                 },
                 6: { 
