--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -435,7 +435,7 @@
                     name: "Buzo Canguro", 
                     price: 26999, 
                     images: {
-                        "Negro": "assets/products/buzo-canguro-negro.jpg"
+                        "Negro": "buzocanguro-negro.jpeg"
                     }, 
                     sizes: ["S", "M", "L", "XL"], 
                     colors: ["Negro"] 
