--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -436,9 +436,13 @@
                     price: 26999, 
                     images: {
                         "Negro": "buzocanguro-negro.jpeg"
+                        "The North Face": "north-face.png"
+
                     }, 
                     sizes: ["S", "M", "L", "XL"], 
-                    colors: ["Negro"] 
+                    colors: ["Negro"],
+                    estampa: ["Sin estampado", "The North Face"]
+
                 },
                 14: { 
                     name: "Calza One Leg", 
